# facial-attendance-server

./: CMakeLists.txt
include/: DBConnection.h  EntityState.h
src/: DBConnection.cpp  main.cpp
